# snoc_automation_agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SPLIT_MANIFEST.md  README.md  TEAM_HANDOFF.md  alembic.ini  app.js  compose.yaml  constraints-langchain.txt  dashboard.py  index.html  package-lock.json  package.json  pyproject.toml  style.css  tailwind.config.js
DSIP Project/: docker-compose.yml  pyproject.toml  snoc_agent.db  snoc_agent.db.pre_hf_schema_reconcile_20260719T090001Z.bak
alembic/: env.py
backend/: .env.example  README.md  alembic.ini  check_vllm.py  docker-compose.yml  pyproject.toml  run_api.py
backend/alembic/: env.py
backend/alembic/versions/: c71a9c65f423_operational_indexes_and_outbox_claims.py
backend/docs/: context_selection.md  email_identity_and_correlation.md  evaluation.md  huggingface_inference.md  model_pipeline.md  runbook.md  state_machine.md
backend/src/snoc_agent/: __init__.py  config.py  config.py.before_raw_limit_fix  logging_config.py
backend/src/snoc_agent/ai/: __init__.py  analyzer.py  context_builder.py  cost.py  errors.py  mock_backend.py  openai_compatible_backend.py  provider.py  routing_backend.py  schemas.py
backend/src/snoc_agent/api/: __init__.py  app.py  auth.py  dq.py  filters.py  main.py  queries.py  schemas.py
backend/src/snoc_agent/business_api/: http_client.py
backend/src/snoc_agent/cli/: commands.py  main.py  runtime.py
backend/src/snoc_agent/db/: models.py  session.py
backend/src/snoc_agent/db/repositories/: conversation_repository.py  email_repository.py  model_run_repository.py  outbox_repository.py
backend/src/snoc_agent/domain/: __init__.py  state_machine.py
backend/src/snoc_agent/evaluation/: comparison.py  matrix_runner.py  pipeline_predictor.py
backend/src/snoc_agent/mail/: imap_client.py  interfaces.py
backend/src/snoc_agent/prompts/: analyzer_v1.md  verifier_v1.md
backend/src/snoc_agent/workflow/: authorizer.py  decision_engine.py  inbound_processor.py  inbound_processor_aliases.py  operation_service.py  outbox_service.py  request_service.py
backend/tests/fixtures/emails/scenario_a_complete_unblock/: 01_complete_unblock.eml
backend/tests/fixtures/emails/scenario_c_multi_operation/: 02_targeted_phone_reply.eml
backend/tests/fixtures/emails/scenario_d_reused_chain/: 01_original_complete_vpn.eml
backend/tests/fixtures/emails/scenario_e_uncorrelated_reply/: 03_uncorrelated_phone_reply.eml
backend/tests/fixtures/emails/scenario_g_mixed_reply/: scenario.json
backend/tests/fixtures/emails/scenario_h_corrections/: 03_correction_after_execution.eml  scenario.json
backend/tests/fixtures/emails/scenario_i_correlation_markers/: 02_header_marker_conflict.eml
backend/tests/fixtures/model_outputs/scenario_b/: analyzer_02_reply_still_missing.json
backend/tests/fixtures/model_outputs/scenario_c/: analyzer_02_targeted_phone_reply.json  verifier_01_unblock_op1.json  verifier_01_vpn_op3.json
backend/tests/fixtures/model_outputs/scenario_d/: analyzer_01_original_complete_vpn.json
backend/tests/integration/: test_acceptance_scenarios.py  test_execution_failure_escalation.py
backend/tests/unit/: test_api_and_vllm.py  test_business_api.py  test_calibration_and_subsets.py  test_decision_engine.py  test_domain_safety.py  test_execution_service_safety.py  test_huggingface_backend.py  test_imap_client.py  test_inference_cache_and_robustness.py  test_mail_markers_and_filtering.py  test_reply_segmenter.py
docs/: langchain_five_agent_migration_plan.md  (+2 more)
(+304 files in other folders)
